--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "node-telegram-bot-api": "^0.63.0",
+    "sqlite3": "^5.1.7",
     "tsx": "^4.19.2",
     "ws": "^8.18.0"
   }
