--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
     "dotenv": "^16.4.7",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0",
     "sqlite3": "^5.1.7",
     "tsx": "^4.19.2",
